syntax = "proto3";

package covitrace;

option go_package="contact_tracing";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// TraceUserLocationsRequest is request to trace a user locations
message TraceUserLocationsRequest {
    string phone_number = 1;
    string since_date = 2;
    repeated string counties = 3;
}

// TraceUserLocationsRequest is request to trace a user locations
message TraceUsersLocationsRequest {
    repeated string counties = 1;
    string since_date = 2;
}

// OperationStatus is the status of an operation
enum OperationStatus {
    PENDING = 0;
    COMPLETED = 1;
    FAILED = 2;
}

// ContactTracingOperation is contains data for contact tracing
message ContactTracingOperation {
    int64 id = 1;
    OperationStatus status = 2;
    string county = 3;
    string description = 4;
    string name = 5;
    string result = 6;
    int64 timestamp = 7;
}

// ListOperationsRequest is request to get list of contact tracing operations
message ListOperationsRequest {
    repeated string counties = 1;
    int32 page_token = 2;
    int32 page_size = 3;
}

// ListOperationsResponse is response containing collection contact tracing operation
message ListOperationsResponse {
    repeated ContactTracingOperation operations = 1;
    int32 next_page_token = 2;
}

// ContactTracingResponse contains the ID of the contact tracing operation
message ContactTracingResponse {
    int64 operation_id = 1;
}

// Traces user previous locations
service ContactTracing {
    // Traces user locations and matching corresponding contact points
    rpc TraceUserLocations (TraceUserLocationsRequest) returns (ContactTracingResponse) {
        // Maps to HTTP POST
        // Everything maps to the body of the request
        option (google.api.http) = {
            post: "/api/v1/trace/users/{phone_number}"
            body: "*"
        };
    };

    // Traces user locations and matching corresponding contact points
    rpc TraceUsersLocations (TraceUsersLocationsRequest) returns (ContactTracingResponse) {
        // Maps to HTTP POST
        // Everything maps to the body of the request
        option (google.api.http) = {
            post: "/api/v1/trace/users"
            body: "*"
        };
    };

    // Fetches contact tracing operations
    rpc ListOperations (ListOperationsRequest) returns (ListOperationsResponse) {
        option (google.api.http) = {
            get: "/api/v1/trace/operations"
        };
    };
}